fix(update-record): update Holdings and Instance record mergers to ignore specific fields during merge
Closes: MODQM-505